Closed Bug 928736 Opened 11 years ago Closed 11 years ago

NamespaceImports.h:41:7: warning: type attributes ignored after type is already defined

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla27

People

(Reporter: Benjamin, Assigned: Benjamin)

References

Details

Attachments

(1 file)

Attached patch ni-warn.patchSplinter Review
In file included from ../gc/Barrier.h:10:0, from ../jsatom.h:14, from ../vm/Runtime.h:19, from ../jscntxt.h:15, from ../builtin/TypeRepresentation.h:51, from ../jscompartment.h:12, from /home/benjamin/dev/mozilla/inbound/js/src/gc/Iteration.cpp:8: ../NamespaceImports.h:41:7: warning: type attributes ignored after type is already defined [-Wattributes] ../NamespaceImports.h:42:7: warning: type attributes ignored after type is already defined [-Wattributes] Attached patch resolves this by not importing ContextOptionsRef. That seems fine to me, since people inside the engine should use cx->options().
Attachment #819476 - Flags: review?(ejpbruel)
I'd love for this to get fixed... I even have my own patch for it. But Benjamin's seems more focussed. Note that Clang++ complains if the attributes are *not* present on forward declarations, so placing them only on the full declaration isn't an option.
Comment on attachment 819476 [details] [diff] [review] ni-warn.patch Yoink. Thanks Benjamin!
Attachment #819476 - Flags: review?(ejpbruel) → review?(luke)
Attachment #819476 - Flags: review?(luke) → review+
Assignee: nobody → benjamin
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: