Bug 928736 - Fix compiler warnings related to context options namespace importing. r=luke