js/src/shell/js.cpp
@@ -424,8 +424,8 @@ RunFile(JSContext *cx, Handle<JSObject*> obj, const char *filename, FILE *file, 
 
     {
         AutoSaveContextOptions asco(cx);
-        ContextOptionsRef(cx).setCompileAndGo(true)
-                             .setNoScriptRval(true);
+        JS::ContextOptionsRef(cx).setCompileAndGo(true)
+                                 .setNoScriptRval(true);
 
         CompileOptions options(cx);
         options.setUTF8(true)
@@ -690,7 +690,7 @@ Options(JSContext *cx, unsigned argc, jsval *vp)
 {
     CallArgs args = CallArgsFromVp(argc, vp);
 
-    ContextOptions oldOptions = ContextOptionsRef(cx);
+    ContextOptions oldOptions = JS::ContextOptionsRef(cx);
     for (unsigned i = 0; i < args.length(); i++) {
         JSString *str = JS_ValueToString(cx, args[i]);
         if (!str)
@@ -702,13 +702,13 @@ Options(JSContext *cx, unsigned argc, jsval *vp)
             return false;
 
         if (strcmp(opt.ptr(), "strict") == 0)
-            ContextOptionsRef(cx).toggleExtraWarnings();
+            JS::ContextOptionsRef(cx).toggleExtraWarnings();
         else if (strcmp(opt.ptr(), "typeinfer") == 0)
-            ContextOptionsRef(cx).toggleTypeInference();
+            JS::ContextOptionsRef(cx).toggleTypeInference();
         else if (strcmp(opt.ptr(), "werror") == 0)
-            ContextOptionsRef(cx).toggleWerror();
+            JS::ContextOptionsRef(cx).toggleWerror();
         else if (strcmp(opt.ptr(), "strict_mode") == 0)
-            ContextOptionsRef(cx).toggleStrictMode();
+            JS::ContextOptionsRef(cx).toggleStrictMode();
         else {
             char* msg = JS_sprintf_append(nullptr,
                                           "unknown option name '%s'."
@@ -825,7 +825,7 @@ class AutoNewContext
         newcx = NewContext(JS_GetRuntime(cx));
         if (!newcx)
             return false;
-        ContextOptionsRef(newcx).setDontReportUncaught(true);
+        JS::ContextOptionsRef(newcx).setDontReportUncaught(true);
         js::SetDefaultObjectForContext(newcx, JS::CurrentGlobalOrNull(cx));
 
         newRequest.construct(newcx);
@@ -1064,7 +1064,7 @@ Evaluate(JSContext *cx, unsigned argc, jsval *vp)
 
         {
             AutoSaveContextOptions asco(cx);
-            ContextOptionsRef(cx).setCompileAndGo(compileAndGo)
+            JS::ContextOptionsRef(cx).setCompileAndGo(compileAndGo)
                                  .setNoScriptRval(noScriptRval);
 
             CompileOptions options(cx);
@@ -1227,8 +1227,8 @@ Run(JSContext *cx, unsigned argc, jsval *vp)
     int64_t startClock = PRMJ_Now();
     {
         AutoSaveContextOptions asco(cx);
-        ContextOptionsRef(cx).setCompileAndGo(true)
-                             .setNoScriptRval(true);
+        JS::ContextOptionsRef(cx).setCompileAndGo(true)
+                                 .setNoScriptRval(true);
 
         script = JS_CompileUCScript(cx, thisobj, ucbuf, buflen, filename.ptr(), 1);
         if (!script)
@@ -2064,8 +2064,8 @@ DisassFile(JSContext *cx, unsigned argc, jsval *vp)
 
     {
         AutoSaveContextOptions asco(cx);
-        ContextOptionsRef(cx).setCompileAndGo(true)
-                             .setNoScriptRval(true);
+        JS::ContextOptionsRef(cx).setCompileAndGo(true)
+                                 .setNoScriptRval(true);
 
         CompileOptions options(cx);
         options.setUTF8(true)
@@ -3183,8 +3183,8 @@ Compile(JSContext *cx, unsigned argc, jsval *vp)
     RootedObject global(cx, JS::CurrentGlobalOrNull(cx));
     JSString *scriptContents = JSVAL_TO_STRING(arg0);
     AutoSaveContextOptions asco(cx);
-    ContextOptionsRef(cx).setCompileAndGo(true)
-                         .setNoScriptRval(true);
+    JS::ContextOptionsRef(cx).setCompileAndGo(true)
+                              .setNoScriptRval(true);
     bool ok = JS_CompileUCScript(cx, global, JS_GetStringCharsZ(cx, scriptContents),
                                  JS_GetStringLength(scriptContents), "<string>", 1);
     JS_SET_RVAL(cx, vp, UndefinedValue());
@@ -5291,13 +5291,13 @@ NewContext(JSRuntime *rt)
     JS_SetContextPrivate(cx, data);
     JS_SetErrorReporter(cx, my_ErrorReporter);
     if (enableTypeInference)
-        ContextOptionsRef(cx).toggleTypeInference();
+        JS::ContextOptionsRef(cx).toggleTypeInference();
     if (enableIon)
-        ContextOptionsRef(cx).toggleIon();
+        JS::ContextOptionsRef(cx).toggleIon();
     if (enableBaseline)
-        ContextOptionsRef(cx).toggleBaseline();
+        JS::ContextOptionsRef(cx).toggleBaseline();
     if (enableAsmJS)
-        ContextOptionsRef(cx).toggleAsmJS();
+        JS::ContextOptionsRef(cx).toggleAsmJS();
     return cx;
 }
 
@@ -5421,7 +5421,7 @@ ProcessArgs(JSContext *cx, JSObject *obj_, OptionParser *op)
         reportWarnings = false;
 
     if (op->getBoolOption('s'))
-        ContextOptionsRef(cx).toggleExtraWarnings();
+        JS::ContextOptionsRef(cx).toggleExtraWarnings();
 
     if (op->getBoolOption('d')) {
         JS_SetRuntimeDebugMode(JS_GetRuntime(cx), true);
@@ -5452,16 +5452,16 @@ ProcessArgs(JSContext *cx, JSObject *obj_, OptionParser *op)
 #if defined(JS_ION)
     if (op->getBoolOption("no-ion")) {
         enableIon = false;
-        ContextOptionsRef(cx).toggleIon();
+        JS::ContextOptionsRef(cx).toggleIon();
     }
     if (op->getBoolOption("no-asmjs")) {
         enableAsmJS = false;
-        ContextOptionsRef(cx).toggleAsmJS();
+        JS::ContextOptionsRef(cx).toggleAsmJS();
     }
 
     if (op->getBoolOption("no-baseline")) {
         enableBaseline = false;
-        ContextOptionsRef(cx).toggleBaseline();
+        JS::ContextOptionsRef(cx).toggleBaseline();
     }
 
     if (const char *str = op->getStringOption("ion-gvn")) {
@@ -5641,7 +5641,7 @@ Shell(JSContext *cx, OptionParser *op, char **envp)
      */
     if (op->getBoolOption("no-ti")) {
         enableTypeInference = false;
-        ContextOptionsRef(cx).toggleTypeInference();
+        JS::ContextOptionsRef(cx).toggleTypeInference();
     }
 
     if (op->getBoolOption("fuzzing-safe"))
